--- a/src/main/resources/languagedetector-main.fxml
+++ b/src/main/resources/languagedetector-main.fxml
@@ -10,7 +10,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity"
 	minHeight="-Infinity" minWidth="-Infinity" prefHeight="426.0"
 	prefWidth="634.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="application.Controller">
+	fx:controller="control.Controller">
 	<children>
 		<TextArea layoutX="14.0" layoutY="14.0" prefHeight="394.0"
 			prefWidth="386.0" fx:id="textArea" />
